Continue features for videogular test

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,6 +59,6 @@
   "anms.settings.themes.sticky-header": "Sticky header",
   "anms.settings.themes.title": "Themes",
   "anms.settings.title": "Settings",
-  "anms.title.long": "Angular NgRx Material Starter",
-  "anms.title.short": "Angular Starter"
+  "anms.title.long": "Advanced Replay",
+  "anms.title.short": "Advanced Replay"
 }
