--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -59,6 +59,6 @@
   "anms.settings.themes.sticky-header": "Entête fixe",
   "anms.settings.themes.title": "Thèmes",
   "anms.settings.title": "Paramètres",
-  "anms.title.long": "Kit de démarrage Angular NgRx Material",
-  "anms.title.short": "Kit de démarrage"
+  "anms.title.long": "Advanced Replay",
+  "anms.title.short": "Advanced Replay"
 }
